k8s/media/plex/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: harbor.fnptr.net/docker/plexinc/pms-docker
        resources:
          requests:
            memory: "4Gi"
            cpu: "8000m"
          limits:
            memory: "16Gi"
            cpu: "8000m"
        ports:
          - containerPort: 32400
            name: "plex-port"
        volumeMounts:
          - mountPath: "/data"
            name: plex-data-volume
          - mountPath: "/config"
            name: plex-config-volume
      volumes:
      - name: plex-data-volume
        persistentVolumeClaim:
          claimName: media-plex-data-claim
      - name: plex-config-volume
        persistentVolumeClaim:
          claimName: media-plex-config-claim
      securityContext:
        fsGroup: 1000
